Added React to externals and load it via CDN

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Hello ReactJS</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.js"></script>
     </head>
     <body>
         <div id="content"></div>
